// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`base > should create a base project > ./test/path/.editorconfig 1`] = `
"# editorconfig.org
root = true

[*]
indent_style = space
indent_size = 2
"
`;

exports[`base > should create a base project > ./test/path/.gitignore 1`] = `
"# dependencies
node_modules
.pnp
.pnp.js
package-lock.json
yarn.lock

# tsup
dist/

# misc
.DS_Store
*.pem

# debug
npm-debug.log*
yarn-debug.log*
yarn-error.log*
.pnpm-debug.log*

# local env files
.env
.env*.local

# turbo
.turbo

# vercel cli
.vercel

# next.js
.next/
out/
build
next-env.d.ts
"
`;

exports[`base > should create a base project > ./test/path/.prettierignore 1`] = `
"pnpm-lock.yaml
public
"
`;

exports[`base > should create a base project > ./test/path/package.json 1`] = `
"{
  \\"name\\": \\"test\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"scripts\\": {
    \\"build\\": \\"turbo run build\\",
    \\"clean\\": \\"find . -name node_modules -o -name .turbo -o -name .next -o -name dist -type d -prune | xargs rm -rf\\",
    \\"dev\\": \\"turbo run dev\\",
    \\"format\\": \\"bash -c 'prettier \\\\\\"**/*\\\\\\" --ignore-unknown --ignore-path <(cat .gitignore .prettierignore) --check'\\",
    \\"format:fix\\": \\"bash -c 'prettier \\\\\\"**/*\\\\\\" --ignore-unknown --ignore-path <(cat .gitignore .prettierignore) --write'\\",
    \\"lint\\": \\"turbo lint && manypkg check\\",
    \\"lint:fix\\": \\"turbo lint -- --fix && manypkg fix\\",
    \\"plop\\": \\"plop\\",
    \\"types\\": \\"turbo types && tsc --noEmit\\"
  },
  \\"dependencies\\": {
    \\"@2digits/eslint-config\\": \\"^0.3.0\\",
    \\"@2digits/prettier-config\\": \\"^0.3.0\\",
    \\"@2digits/tsconfig\\": \\"^0.1.1\\",
    \\"@manypkg/cli\\": \\"^0.20.0\\",
    \\"@types/node\\": \\"^18.16.3\\",
    \\"eslint\\": \\"^8.39.0\\",
    \\"plop\\": \\"^3.1.2\\",
    \\"prettier\\": \\"^2.8.8\\",
    \\"turbo\\": \\"^1.9.3\\",
    \\"typescript\\": \\"^5.0.4\\"
  },
  \\"packageManager\\": \\"pnpm@8.4.0\\",
  \\"engines\\": {
    \\"node\\": \\">=18.0.0\\"
  },
  \\"manypkg\\": {
    \\"ignoredRules\\": [
      \\"INTERNAL_MISMATCH\\"
    ]
  },
  \\"pnpm\\": {
    \\"neverBuiltDependencies\\": [
      \\"core-js\\",
      \\"core-js-compat\\",
      \\"core-js-pure\\",
      \\"cypress\\"
    ]
  },
  \\"prettier\\": \\"@2digits/prettier-config\\",
  \\"eslintConfig\\": {
    \\"extends\\": \\"@2digits\\"
  }
}
"
`;

exports[`base > should create a base project > ./test/path/pnpm-workspace.yaml 1`] = `
"packages:
  - 'apps/*'
  - 'packages/*'
"
`;

exports[`base > should create a base project > ./test/path/tsconfig.json 1`] = `
"{
  \\"extends\\": \\"@2digits/tsconfig/tsconfig.json\\"
}
"
`;

exports[`base > should create a base project > ./test/path/turbo.json 1`] = `
"{
  \\"globalDependencies\\": [\\"**/.env\\", \\"tsconfig.json\\"],
  \\"pipeline\\": {
    \\"build\\": { \\"dependsOn\\": [\\"^build\\"], \\"outputs\\": [\\"dist/**\\", \\"build/**\\"] },
    \\"dev\\": { \\"cache\\": false, \\"persistent\\": true },
    \\"lint\\": { \\"cache\\": false },
    \\"lint-fix\\": { \\"cache\\": false },
    \\"types\\": { \\"dependsOn\\": [\\"^types\\"], \\"cache\\": false }
  }
}
"
`;

exports[`base > web > should create a web app > ./test/path/.editorconfig 1`] = `
"# editorconfig.org
root = true

[*]
indent_style = space
indent_size = 2
"
`;

exports[`base > web > should create a web app > ./test/path/.gitignore 1`] = `
"# dependencies
node_modules
.pnp
.pnp.js
package-lock.json
yarn.lock

# tsup
dist/

# misc
.DS_Store
*.pem

# debug
npm-debug.log*
yarn-debug.log*
yarn-error.log*
.pnpm-debug.log*

# local env files
.env
.env*.local

# turbo
.turbo

# vercel cli
.vercel

# next.js
.next/
out/
build
next-env.d.ts
"
`;

exports[`base > web > should create a web app > ./test/path/.prettierignore 1`] = `
"pnpm-lock.yaml
public
"
`;

exports[`base > web > should create a web app > ./test/path/apps/web/next.config.mjs 1`] = `
"import bundleAnalyzer from '@next/bundle-analyzer';
import { withSentryConfig } from '@sentry/nextjs';

const shouldAnalyze = process.env.ANALYZE === 'true';

/** @type {(config?: import('next').NextConfig) => import('next').NextConfig} */
const withBundleAnalyzer = bundleAnalyzer({
  enabled: shouldAnalyze,
});

/** @type {import('next').NextConfig} */
const config = {
  reactStrictMode: true,

  /** We run eslint as a separate task in CI */
  eslint: { ignoreDuringBuilds: true },
};

export default withSentryConfig(
  shouldAnalyze ? withBundleAnalyzer(config) : config,
  {},
  { hideSourceMaps: true },
);
"
`;

exports[`base > web > should create a web app > ./test/path/apps/web/package.json 1`] = `
"{
  \\"name\\": \\"@mod/web\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"scripts\\": {
    \\"build\\": \\"next build\\",
    \\"dev\\": \\"next dev\\",
    \\"lint\\": \\"eslint --ignore-path ../../.gitignore .\\",
    \\"start\\": \\"next start\\",
    \\"types\\": \\"tsc --noEmit\\"
  },
  \\"dependencies\\": {
    \\"@sentry/cli\\": \\"^2.17.5\\",
    \\"@sentry/nextjs\\": \\"^7.50.0\\",
    \\"next\\": \\"^13.3.4\\",
    \\"react\\": \\"^18.2.0\\",
    \\"react-dom\\": \\"^18.2.0\\"
  },
  \\"devDependencies\\": {
    \\"@2digits/tsconfig\\": \\"^0.1.1\\",
    \\"@babel/core\\": \\"^7.21.8\\",
    \\"@next/bundle-analyzer\\": \\"^13.3.4\\",
    \\"@types/node\\": \\"^18.16.3\\",
    \\"@types/react\\": \\"^18.2.0\\",
    \\"@types/react-dom\\": \\"^18.2.1\\",
    \\"eslint\\": \\"^8.39.0\\",
    \\"typescript\\": \\"^5.0.4\\"
  }
}
"
`;

exports[`base > web > should create a web app > ./test/path/apps/web/sentry.client.config.ts 1`] = `
"import './sentry.config';
"
`;

exports[`base > web > should create a web app > ./test/path/apps/web/sentry.config.ts 1`] = `
"import * as Sentry from '@sentry/nextjs';

function initSentry() {
  const SENTRY_DSN = process.env.SENTRY_DSN ?? process.env.NEXT_PUBLIC_SENTRY_DSN;

  if (!SENTRY_DSN) {
    console.warn('No Sentry DSN found, check your environment variables');

    return;
  }

  Sentry.init({
    enabled: process.env.NODE_ENV !== 'development',
    dsn: SENTRY_DSN,
  });
}

initSentry();
"
`;

exports[`base > web > should create a web app > ./test/path/apps/web/sentry.edge.config.ts 1`] = `
"import './sentry.config';
"
`;

exports[`base > web > should create a web app > ./test/path/apps/web/sentry.server.config.ts 1`] = `
"import './sentry.config';
"
`;

exports[`base > web > should create a web app > ./test/path/apps/web/src/pages/_app.tsx 1`] = `
"import type { AppProps } from 'next/app';

function App({ Component, pageProps }: AppProps) {
  return <Component {...pageProps} />;
}

export default App;
"
`;

exports[`base > web > should create a web app > ./test/path/apps/web/src/pages/index.tsx 1`] = `
"export default function Home() {
  return (
    <div>
      <h1>Hello, world!</h1>
    </div>
  );
}
"
`;

exports[`base > web > should create a web app > ./test/path/apps/web/tsconfig.json 1`] = `
"{
  \\"extends\\": \\"@2digits/tsconfig/tsconfig.json\\",
  \\"include\\": [\\"next-env.d.ts\\", \\"**/*.ts\\", \\"**/*.tsx\\", \\"next.config.mjs\\", \\".next/types/**/*.ts\\"],
  \\"compilerOptions\\": {
    \\"incremental\\": true,
    \\"baseUrl\\": \\"./src\\",
    \\"module\\": \\"esnext\\",
    \\"jsx\\": \\"preserve\\",
    \\"plugins\\": [
      {
        \\"name\\": \\"next\\"
      }
    ],
    \\"moduleResolution\\": \\"node\\"
  },
  \\"exclude\\": [\\"node_modules\\"]
}
"
`;

exports[`base > web > should create a web app > ./test/path/apps/web/turbo.json 1`] = `
"{
  \\"extends\\": [\\"//\\"],
  \\"pipeline\\": {
    \\"build\\": {
      \\"env\\": [\\"SENTRY_DSN\\", \\"NEXT_PUBLIC_SENTRY_DSN\\", \\"ANALYZE\\", \\"NODE_ENV\\", \\"VERCEL_URL\\"],
      \\"outputs\\": [\\".next/**\\", \\"!.next/cache/**\\"]
    }
  }
}
"
`;

exports[`base > web > should create a web app > ./test/path/package.json 1`] = `
"{
  \\"name\\": \\"test\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"scripts\\": {
    \\"build\\": \\"turbo run build\\",
    \\"clean\\": \\"find . -name node_modules -o -name .turbo -o -name .next -o -name dist -type d -prune | xargs rm -rf\\",
    \\"dev\\": \\"turbo run dev\\",
    \\"format\\": \\"bash -c 'prettier \\\\\\"**/*\\\\\\" --ignore-unknown --ignore-path <(cat .gitignore .prettierignore) --check'\\",
    \\"format:fix\\": \\"bash -c 'prettier \\\\\\"**/*\\\\\\" --ignore-unknown --ignore-path <(cat .gitignore .prettierignore) --write'\\",
    \\"lint\\": \\"turbo lint && manypkg check\\",
    \\"lint:fix\\": \\"turbo lint -- --fix && manypkg fix\\",
    \\"plop\\": \\"plop\\",
    \\"types\\": \\"turbo types && tsc --noEmit\\"
  },
  \\"dependencies\\": {
    \\"@2digits/eslint-config\\": \\"^0.3.0\\",
    \\"@2digits/prettier-config\\": \\"^0.3.0\\",
    \\"@2digits/tsconfig\\": \\"^0.1.1\\",
    \\"@manypkg/cli\\": \\"^0.20.0\\",
    \\"@types/node\\": \\"^18.16.3\\",
    \\"eslint\\": \\"^8.39.0\\",
    \\"plop\\": \\"^3.1.2\\",
    \\"prettier\\": \\"^2.8.8\\",
    \\"turbo\\": \\"^1.9.3\\",
    \\"typescript\\": \\"^5.0.4\\"
  },
  \\"packageManager\\": \\"pnpm@8.4.0\\",
  \\"engines\\": {
    \\"node\\": \\">=18.0.0\\"
  },
  \\"manypkg\\": {
    \\"ignoredRules\\": [
      \\"INTERNAL_MISMATCH\\"
    ]
  },
  \\"pnpm\\": {
    \\"neverBuiltDependencies\\": [
      \\"core-js\\",
      \\"core-js-compat\\",
      \\"core-js-pure\\",
      \\"cypress\\"
    ]
  },
  \\"prettier\\": \\"@2digits/prettier-config\\",
  \\"eslintConfig\\": {
    \\"extends\\": \\"@2digits\\"
  }
}
"
`;

exports[`base > web > should create a web app > ./test/path/pnpm-workspace.yaml 1`] = `
"packages:
  - 'apps/*'
  - 'packages/*'
"
`;

exports[`base > web > should create a web app > ./test/path/tsconfig.json 1`] = `
"{
  \\"extends\\": \\"@2digits/tsconfig/tsconfig.json\\"
}
"
`;

exports[`base > web > should create a web app > ./test/path/turbo.json 1`] = `
"{
  \\"globalDependencies\\": [\\"**/.env\\", \\"tsconfig.json\\"],
  \\"pipeline\\": {
    \\"build\\": { \\"dependsOn\\": [\\"^build\\"], \\"outputs\\": [\\"dist/**\\", \\"build/**\\"] },
    \\"dev\\": { \\"cache\\": false, \\"persistent\\": true },
    \\"lint\\": { \\"cache\\": false },
    \\"lint-fix\\": { \\"cache\\": false },
    \\"types\\": { \\"dependsOn\\": [\\"^types\\"], \\"cache\\": false }
  }
}
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/.editorconfig 1`] = `
"# editorconfig.org
root = true

[*]
indent_style = space
indent_size = 2
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/.gitignore 1`] = `
"# dependencies
node_modules
.pnp
.pnp.js
package-lock.json
yarn.lock

# tsup
dist/

# misc
.DS_Store
*.pem

# debug
npm-debug.log*
yarn-debug.log*
yarn-error.log*
.pnpm-debug.log*

# local env files
.env
.env*.local

# turbo
.turbo

# vercel cli
.vercel

# next.js
.next/
out/
build
next-env.d.ts
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/.prettierignore 1`] = `
"pnpm-lock.yaml
public
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/apps/web/next.config.mjs 1`] = `
"import bundleAnalyzer from '@next/bundle-analyzer';
import { withSentryConfig } from '@sentry/nextjs';

const shouldAnalyze = process.env.ANALYZE === 'true';

/** @type {(config?: import('next').NextConfig) => import('next').NextConfig} */
const withBundleAnalyzer = bundleAnalyzer({
  enabled: shouldAnalyze,
});

/** @type {import('next').NextConfig} */
const config = {
  reactStrictMode: true,

  /** We run eslint as a separate task in CI */
  eslint: { ignoreDuringBuilds: true },
};

export default withSentryConfig(
  shouldAnalyze ? withBundleAnalyzer(config) : config,
  {},
  { hideSourceMaps: true },
);
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/apps/web/package.json 1`] = `
"{
  \\"name\\": \\"@mod/web\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"scripts\\": {
    \\"build\\": \\"next build\\",
    \\"dev\\": \\"next dev\\",
    \\"lint\\": \\"eslint --ignore-path ../../.gitignore .\\",
    \\"start\\": \\"next start\\",
    \\"types\\": \\"tsc --noEmit\\"
  },
  \\"dependencies\\": {
    \\"@mod/stitches\\": \\"workspace:*\\",
    \\"@sentry/cli\\": \\"^2.17.5\\",
    \\"@sentry/nextjs\\": \\"^7.50.0\\",
    \\"next\\": \\"^13.3.4\\",
    \\"react\\": \\"^18.2.0\\",
    \\"react-dom\\": \\"^18.2.0\\"
  },
  \\"devDependencies\\": {
    \\"@2digits/tsconfig\\": \\"^0.1.1\\",
    \\"@babel/core\\": \\"^7.21.8\\",
    \\"@next/bundle-analyzer\\": \\"^13.3.4\\",
    \\"@types/node\\": \\"^18.16.3\\",
    \\"@types/react\\": \\"^18.2.0\\",
    \\"@types/react-dom\\": \\"^18.2.1\\",
    \\"eslint\\": \\"^8.39.0\\",
    \\"typescript\\": \\"^5.0.4\\"
  }
}
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/apps/web/sentry.client.config.ts 1`] = `
"import './sentry.config';
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/apps/web/sentry.config.ts 1`] = `
"import * as Sentry from '@sentry/nextjs';

function initSentry() {
  const SENTRY_DSN = process.env.SENTRY_DSN ?? process.env.NEXT_PUBLIC_SENTRY_DSN;

  if (!SENTRY_DSN) {
    console.warn('No Sentry DSN found, check your environment variables');

    return;
  }

  Sentry.init({
    enabled: process.env.NODE_ENV !== 'development',
    dsn: SENTRY_DSN,
  });
}

initSentry();
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/apps/web/sentry.edge.config.ts 1`] = `
"import './sentry.config';
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/apps/web/sentry.server.config.ts 1`] = `
"import './sentry.config';
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/apps/web/src/pages/_app.tsx 1`] = `
"import type { AppProps } from 'next/app';

import '@mod/stitches/reset';

function App({ Component, pageProps }: AppProps) {
  return <Component {...pageProps} />;
}

export default App;
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/apps/web/src/pages/_document.tsx 1`] = `
"import { Head, Html, Main, NextScript } from 'next/document';

import { getCssText } from '@mod/stitches';

export default function Document() {
  return (
    <Html>
      <Head>
        <style id=\\"stitches\\" dangerouslySetInnerHTML={{ __html: getCssText() }} />
      </Head>

      <body>
        <Main />

        <NextScript />
      </body>
    </Html>
  );
}
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/apps/web/src/pages/index.tsx 1`] = `
"export default function Home() {
  return (
    <div>
      <h1>Hello, world!</h1>
    </div>
  );
}
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/apps/web/tsconfig.json 1`] = `
"{
  \\"extends\\": \\"@2digits/tsconfig/tsconfig.json\\",
  \\"include\\": [\\"next-env.d.ts\\", \\"**/*.ts\\", \\"**/*.tsx\\", \\"next.config.mjs\\", \\".next/types/**/*.ts\\"],
  \\"compilerOptions\\": {
    \\"incremental\\": true,
    \\"baseUrl\\": \\"./src\\",
    \\"module\\": \\"esnext\\",
    \\"jsx\\": \\"preserve\\",
    \\"plugins\\": [
      {
        \\"name\\": \\"next\\"
      }
    ],
    \\"moduleResolution\\": \\"node\\"
  },
  \\"exclude\\": [\\"node_modules\\"]
}
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/apps/web/turbo.json 1`] = `
"{
  \\"extends\\": [\\"//\\"],
  \\"pipeline\\": {
    \\"build\\": {
      \\"env\\": [\\"SENTRY_DSN\\", \\"NEXT_PUBLIC_SENTRY_DSN\\", \\"ANALYZE\\", \\"NODE_ENV\\", \\"VERCEL_URL\\"],
      \\"outputs\\": [\\".next/**\\", \\"!.next/cache/**\\"]
    }
  }
}
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/package.json 1`] = `
"{
  \\"name\\": \\"test\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"scripts\\": {
    \\"build\\": \\"turbo run build\\",
    \\"clean\\": \\"find . -name node_modules -o -name .turbo -o -name .next -o -name dist -type d -prune | xargs rm -rf\\",
    \\"dev\\": \\"turbo run dev\\",
    \\"format\\": \\"bash -c 'prettier \\\\\\"**/*\\\\\\" --ignore-unknown --ignore-path <(cat .gitignore .prettierignore) --check'\\",
    \\"format:fix\\": \\"bash -c 'prettier \\\\\\"**/*\\\\\\" --ignore-unknown --ignore-path <(cat .gitignore .prettierignore) --write'\\",
    \\"lint\\": \\"turbo lint && manypkg check\\",
    \\"lint:fix\\": \\"turbo lint -- --fix && manypkg fix\\",
    \\"plop\\": \\"plop\\",
    \\"types\\": \\"turbo types && tsc --noEmit\\"
  },
  \\"dependencies\\": {
    \\"@2digits/eslint-config\\": \\"^0.3.0\\",
    \\"@2digits/prettier-config\\": \\"^0.3.0\\",
    \\"@2digits/tsconfig\\": \\"^0.1.1\\",
    \\"@manypkg/cli\\": \\"^0.20.0\\",
    \\"@types/node\\": \\"^18.16.3\\",
    \\"eslint\\": \\"^8.39.0\\",
    \\"plop\\": \\"^3.1.2\\",
    \\"prettier\\": \\"^2.8.8\\",
    \\"turbo\\": \\"^1.9.3\\",
    \\"typescript\\": \\"^5.0.4\\"
  },
  \\"packageManager\\": \\"pnpm@8.4.0\\",
  \\"engines\\": {
    \\"node\\": \\">=18.0.0\\"
  },
  \\"manypkg\\": {
    \\"ignoredRules\\": [
      \\"INTERNAL_MISMATCH\\"
    ]
  },
  \\"pnpm\\": {
    \\"neverBuiltDependencies\\": [
      \\"core-js\\",
      \\"core-js-compat\\",
      \\"core-js-pure\\",
      \\"cypress\\"
    ]
  },
  \\"prettier\\": \\"@2digits/prettier-config\\",
  \\"eslintConfig\\": {
    \\"extends\\": \\"@2digits\\"
  }
}
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/packages/stitches/package.json 1`] = `
"{
  \\"name\\": \\"@mod/stitches\\",
  \\"version\\": \\"0.0.0\\",
  \\"private\\": true,
  \\"sideEffects\\": false,
  \\"exports\\": {
    \\"./package.json\\": \\"./package.json\\",
    \\".\\": {
      \\"import\\": \\"./dist/index.mjs\\",
      \\"types\\": \\"./src/index.ts\\"
    },
    \\"./reset\\": \\"./dist/reset.css\\"
  },
  \\"scripts\\": {
    \\"build\\": \\"tsup\\",
    \\"dev\\": \\"tsup --watch\\",
    \\"lint\\": \\"eslint --ignore-path ../../.gitignore .\\",
    \\"types\\": \\"tsc --noEmit\\"
  },
  \\"module\\": \\"dist/index.mjs\\",
  \\"types\\": \\"src/index.ts\\",
  \\"files\\": [
    \\"dist\\"
  ],
  \\"dependencies\\": {
    \\"@stitches/react\\": \\"^1.3.1-1\\",
    \\"@unocss/reset\\": \\"^0.51.8\\",
    \\"react\\": \\"^18.2.0\\",
    \\"react-dom\\": \\"^18.2.0\\"
  },
  \\"devDependencies\\": {
    \\"@2digits/tsconfig\\": \\"^0.1.1\\",
    \\"@types/react\\": \\"^18.2.0\\",
    \\"@types/react-dom\\": \\"^18.2.1\\",
    \\"eslint\\": \\"^8.39.0\\",
    \\"tsup\\": \\"^6.7.0\\",
    \\"typescript\\": \\"^5.0.4\\"
  }
}
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/packages/stitches/src/helpers/createRangeVariant.ts 1`] = `
"import type { CSS } from '../types';

type InnerNumberRange<
  TNumber extends number,
  TRange extends unknown[],
> = TRange['length'] extends TNumber
  ? TRange['length']
  : InnerNumberRange<TNumber, [TNumber, ...TRange]> | TRange['length'];

type NumberRange<TRange extends number> = number extends TRange
  ? number
  : InnerNumberRange<TRange, []>;

export type RangeVariant<TLength extends number> = Record<NumberRange<TLength>, CSS>;

export const createRangeVariant = <TLength extends number>(
  from: number,
  length: TLength,
  get: (index: number) => CSS,
): RangeVariant<TLength> => {
  const ranges: Record<number, CSS> = {};

  for (let index = from; index < from + length; index++) {
    ranges[index] = get(index);
  }

  return ranges;
};
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/packages/stitches/src/helpers/createScaleVariant.ts 1`] = `
"import { config } from '../stitches';
import type { CSS, Prefixed, Theme } from '../types';

export type TokenByScaleName<TScaleName extends keyof Theme> = Prefixed<
  '$',
  keyof Theme[TScaleName]
>;

export type ScaleVariant<TScaleName extends keyof Theme> = Record<keyof Theme[TScaleName], CSS>;

export type GetCss<TScaleName extends keyof Theme> = (token: TokenByScaleName<TScaleName>) => CSS;

export const createScaleVariant = <TScaleName extends keyof Theme>(
  scaleName: TScaleName,
  getCss: GetCss<TScaleName>,
): ScaleVariant<TScaleName> => {
  const scaleOptions = config.theme[scaleName];

  const variants = {} as ScaleVariant<TScaleName>;

  for (const scale in scaleOptions) {
    variants[scale] = getCss(\`$\${scale}\` as TokenByScaleName<TScaleName>);
  }

  return variants;
};
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/packages/stitches/src/index.ts 1`] = `
"export * from './stitches';
export * from './types';
export * from './helpers/createRangeVariant';
export * from './helpers/createScaleVariant';
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/packages/stitches/src/reset.css 1`] = `
"@import '@unocss/reset/tailwind-compat.css';
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/packages/stitches/src/stitches.ts 1`] = `
"import { createStitches } from '@stitches/react';

export const {
  config,
  createTheme,
  css,
  getCssText,
  globalCss,
  keyframes,
  prefix,
  styled,
  theme,
  reset,
} = createStitches({
  theme: {
    colors: {
      primary: '#762BFF',
      accent: '#00E1FF',
    },

    space: {
      none: 0,
      px: '1px',
      0: '0px',
      '0_25': '2px',
      '0_5': '4px',
      '0_75': '6px',
      1: '8px',
      '1_25': '10px',
      '1_5': '12px',
      '1_75': '14px',
      2: '16px',
      '2_5': '20px',
      3: '24px',
      '3_5': '28px',
      '3_75': '30px',
      4: '32px',
      5: '40px',
      '5_25': '42px',
      '5_5': '44px',
      6: '48px',
      7: '56px',
      8: '64px',
      9: '72px',
      10: '80px',
      11: '88px',
      12: '96px',
      14: '112px',
      16: '128px',
      20: '160px',
      24: '192px',
      28: '224px',
      32: '256px',
      36: '288px',
      40: '320px',
      44: '352px',
      48: '384px',
      52: '416px',
      56: '448px',
      60: '480px',
      64: '512px',
      72: '576px',
      80: '640px',
      96: '768px',
      gutter: '16px',
      sm: '640px',
      md: '728px',
      lg: '1024px',
      xl: '1100px',
      xxl: '1440px',
    },

    get sizes() {
      return this.space;
    },
    set sizes(_value) {
      void 0;
    },
  },
  media: {
    xs: '(min-width: 0)',
    sm: '(min-width: 576px)',
    md: '(min-width: 768px)',
    lg: '(min-width: 992px)',
    xl: '(min-width: 1200px)',
    xxl: '(min-width: 1400px)',

    xsOnly: '(min-width: 0) and (max-width: 575.98px)',
    smOnly: '(min-width: 576px) and (max-width: 767.98px)',
    mdOnly: '(min-width: 768px) and (max-width: 991.98px)',
    lgOnly: '(min-width: 992px) and (max-width: 1199.98px)',
    xlOnly: '(min-width: 1200px) and (max-width: 1399.98px)',
    xxlOnly: '(min-width: 1400px)',

    xsDown: '(max-width: 575.98px)',
    smDown: '(max-width: 767.98px)',
    mdDown: '(max-width: 991.98px)',
    lgDown: '(max-width: 1199.98px)',
    xlDown: '(max-width: 1399.98px)',
    xxlDown: '(max-width: 100vw)',
  },
  utils: {
    maxLines: (value: number) => ({
      display: '-webkit-box',
      WebkitLineClamp: value,
      WebkitBoxOrient: 'vertical',
      overflow: 'hidden',
    }),
  },
});
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/packages/stitches/src/types.ts 1`] = `
"import type {
  CSS as StitchesCSS,
  CSSProperties as StitchesCSSProperties,
  PropertyValue as StitchesPropertyValue,
  ScaleValue as StitchesScaleValue,
} from '@stitches/react';

import type { config } from './stitches';

export type { FontFace, CSSProperties, VariantProps, ComponentProps } from '@stitches/react';

export type Config = typeof config;

export type Theme = Config['theme'];

export type CSS = StitchesCSS<Config>;

export type PropertyValue<TProperty extends keyof StitchesCSSProperties> = StitchesPropertyValue<
  TProperty,
  Config
>;

export type ScaleValue<TScale> = StitchesScaleValue<TScale, Config>;

export type Prefixed<TPrefix extends string, TValue> = \`\${TPrefix}\${Extract<
  TValue,
  boolean | number | string
>}\`;
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/packages/stitches/tsconfig.json 1`] = `
"{
  \\"extends\\": \\"@2digits/tsconfig/tsconfig.json\\",
  \\"include\\": [\\"**/*.ts\\", \\"**/*.tsx\\"],
  \\"compilerOptions\\": {
    \\"moduleResolution\\": \\"node\\"
  }
}
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/packages/stitches/tsup.config.ts 1`] = `
"import { defineConfig } from 'tsup';

import { name } from './package.json';

export default defineConfig({
  minify: true,
  target: 'esnext',
  skipNodeModulesBundle: true,
  sourcemap: true,
  treeshake: true,
  format: ['esm', 'cjs'],
  entry: ['src/index.ts', 'src/reset.css'],
  clean: true,
  dts: {
    entry: 'src/index.ts',
  },
  name,
});
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/pnpm-workspace.yaml 1`] = `
"packages:
  - 'apps/*'
  - 'packages/*'
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/tsconfig.json 1`] = `
"{
  \\"extends\\": \\"@2digits/tsconfig/tsconfig.json\\"
}
"
`;

exports[`base > web > stitches > should add a stitches module > ./test/path/turbo.json 1`] = `
"{
  \\"globalDependencies\\": [\\"**/.env\\", \\"tsconfig.json\\"],
  \\"pipeline\\": {
    \\"build\\": { \\"dependsOn\\": [\\"^build\\"], \\"outputs\\": [\\"dist/**\\", \\"build/**\\"] },
    \\"dev\\": { \\"cache\\": false, \\"persistent\\": true },
    \\"lint\\": { \\"cache\\": false },
    \\"lint-fix\\": { \\"cache\\": false },
    \\"types\\": { \\"dependsOn\\": [\\"^types\\"], \\"cache\\": false }
  }
}
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/.editorconfig 1`] = `
"# editorconfig.org
root = true

[*]
indent_style = space
indent_size = 2
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/.gitignore 1`] = `
"# dependencies
node_modules
.pnp
.pnp.js
package-lock.json
yarn.lock

# tsup
dist/

# misc
.DS_Store
*.pem

# debug
npm-debug.log*
yarn-debug.log*
yarn-error.log*
.pnpm-debug.log*

# local env files
.env
.env*.local

# turbo
.turbo

# vercel cli
.vercel

# next.js
.next/
out/
build
next-env.d.ts
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/.prettierignore 1`] = `
"pnpm-lock.yaml
public
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/apps/web/next.config.mjs 1`] = `
"import bundleAnalyzer from '@next/bundle-analyzer';
import { withSentryConfig } from '@sentry/nextjs';

const shouldAnalyze = process.env.ANALYZE === 'true';

/** @type {(config?: import('next').NextConfig) => import('next').NextConfig} */
const withBundleAnalyzer = bundleAnalyzer({
  enabled: shouldAnalyze,
});

/** @type {import('next').NextConfig} */
const config = {
  reactStrictMode: true,

  /** We run eslint as a separate task in CI */
  eslint: { ignoreDuringBuilds: true },
};

export default withSentryConfig(
  shouldAnalyze ? withBundleAnalyzer(config) : config,
  {},
  { hideSourceMaps: true },
);
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/apps/web/package.json 1`] = `
"{
  \\"name\\": \\"@mod/web\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"scripts\\": {
    \\"build\\": \\"next build\\",
    \\"dev\\": \\"next dev\\",
    \\"lint\\": \\"eslint --ignore-path ../../.gitignore .\\",
    \\"start\\": \\"next start\\",
    \\"types\\": \\"tsc --noEmit\\"
  },
  \\"dependencies\\": {
    \\"@mod/trpc\\": \\"workspace:*\\",
    \\"@sentry/cli\\": \\"^2.17.5\\",
    \\"@sentry/nextjs\\": \\"^7.50.0\\",
    \\"@tanstack/react-query\\": \\"^4.29.5\\",
    \\"@trpc/client\\": \\"^10.23.1\\",
    \\"@trpc/next\\": \\"^10.23.1\\",
    \\"@trpc/react-query\\": \\"^10.23.1\\",
    \\"@trpc/server\\": \\"^10.23.1\\",
    \\"next\\": \\"^13.3.4\\",
    \\"react\\": \\"^18.2.0\\",
    \\"react-dom\\": \\"^18.2.0\\",
    \\"superjson\\": \\"^1.12.3\\",
    \\"zod\\": \\"^3.21.4\\"
  },
  \\"devDependencies\\": {
    \\"@2digits/tsconfig\\": \\"^0.1.1\\",
    \\"@babel/core\\": \\"^7.21.8\\",
    \\"@next/bundle-analyzer\\": \\"^13.3.4\\",
    \\"@types/node\\": \\"^18.16.3\\",
    \\"@types/react\\": \\"^18.2.0\\",
    \\"@types/react-dom\\": \\"^18.2.1\\",
    \\"eslint\\": \\"^8.39.0\\",
    \\"typescript\\": \\"^5.0.4\\"
  }
}
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/apps/web/sentry.client.config.ts 1`] = `
"import './sentry.config';
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/apps/web/sentry.config.ts 1`] = `
"import * as Sentry from '@sentry/nextjs';

function initSentry() {
  const SENTRY_DSN = process.env.SENTRY_DSN ?? process.env.NEXT_PUBLIC_SENTRY_DSN;

  if (!SENTRY_DSN) {
    console.warn('No Sentry DSN found, check your environment variables');

    return;
  }

  Sentry.init({
    enabled: process.env.NODE_ENV !== 'development',
    dsn: SENTRY_DSN,
  });
}

initSentry();
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/apps/web/sentry.edge.config.ts 1`] = `
"import './sentry.config';
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/apps/web/sentry.server.config.ts 1`] = `
"import './sentry.config';
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/apps/web/src/pages/_app.tsx 1`] = `
"import type { AppProps } from 'next/app';

import { trpc } from '../utils/trpc';

function App({ Component, pageProps }: AppProps) {
  return <Component {...pageProps} />;
}

export default trpc.withTRPC(App);
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/apps/web/src/pages/api/trpc/[trpc].ts 1`] = `
"import { appRouter } from '@mod/trpc';
import { createNextApiHandler } from '@trpc/server/adapters/next';

export default createNextApiHandler({
  router: appRouter,
  createContext(options) {
    return options;
  },
});
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/apps/web/src/pages/index.tsx 1`] = `
"export default function Home() {
  return (
    <div>
      <h1>Hello, world!</h1>
    </div>
  );
}
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/apps/web/src/utils/trpc.ts 1`] = `
"import type { AppRouter } from '@mod/trpc';
import { httpBatchLink, loggerLink } from '@trpc/client';
import { createTRPCNext } from '@trpc/next';
import superjson from 'superjson';

const getBaseUrl = () => {
  if (typeof window !== 'undefined') return ''; // browser should use relative url
  if (process.env.VERCEL_URL) return \`https://\${process.env.VERCEL_URL}\`; // SSR should use vercel url

  return \`http://localhost:3000\`; // dev SSR should use localhost
};

export const trpc = createTRPCNext<AppRouter>({
  config() {
    return {
      transformer: superjson,
      links: [
        loggerLink({
          enabled: (opts) =>
            process.env.NODE_ENV === 'development' ||
            (opts.direction === 'down' && opts.result instanceof Error),
        }),
        httpBatchLink({
          url: \`\${getBaseUrl()}/api/trpc\`,
        }),
      ],
    };
  },
  ssr: false,
});

export { type RouterInputs, type RouterOutputs } from '@mod/trpc';
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/apps/web/tsconfig.json 1`] = `
"{
  \\"extends\\": \\"@2digits/tsconfig/tsconfig.json\\",
  \\"include\\": [\\"next-env.d.ts\\", \\"**/*.ts\\", \\"**/*.tsx\\", \\"next.config.mjs\\", \\".next/types/**/*.ts\\"],
  \\"compilerOptions\\": {
    \\"incremental\\": true,
    \\"baseUrl\\": \\"./src\\",
    \\"module\\": \\"esnext\\",
    \\"jsx\\": \\"preserve\\",
    \\"plugins\\": [
      {
        \\"name\\": \\"next\\"
      }
    ],
    \\"moduleResolution\\": \\"node\\"
  },
  \\"exclude\\": [\\"node_modules\\"]
}
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/apps/web/turbo.json 1`] = `
"{
  \\"extends\\": [\\"//\\"],
  \\"pipeline\\": {
    \\"build\\": {
      \\"env\\": [\\"SENTRY_DSN\\", \\"NEXT_PUBLIC_SENTRY_DSN\\", \\"ANALYZE\\", \\"NODE_ENV\\", \\"VERCEL_URL\\"],
      \\"outputs\\": [\\".next/**\\", \\"!.next/cache/**\\"]
    }
  }
}
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/package.json 1`] = `
"{
  \\"name\\": \\"test\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"scripts\\": {
    \\"build\\": \\"turbo run build\\",
    \\"clean\\": \\"find . -name node_modules -o -name .turbo -o -name .next -o -name dist -type d -prune | xargs rm -rf\\",
    \\"dev\\": \\"turbo run dev\\",
    \\"format\\": \\"bash -c 'prettier \\\\\\"**/*\\\\\\" --ignore-unknown --ignore-path <(cat .gitignore .prettierignore) --check'\\",
    \\"format:fix\\": \\"bash -c 'prettier \\\\\\"**/*\\\\\\" --ignore-unknown --ignore-path <(cat .gitignore .prettierignore) --write'\\",
    \\"lint\\": \\"turbo lint && manypkg check\\",
    \\"lint:fix\\": \\"turbo lint -- --fix && manypkg fix\\",
    \\"plop\\": \\"plop\\",
    \\"types\\": \\"turbo types && tsc --noEmit\\"
  },
  \\"dependencies\\": {
    \\"@2digits/eslint-config\\": \\"^0.3.0\\",
    \\"@2digits/prettier-config\\": \\"^0.3.0\\",
    \\"@2digits/tsconfig\\": \\"^0.1.1\\",
    \\"@manypkg/cli\\": \\"^0.20.0\\",
    \\"@types/node\\": \\"^18.16.3\\",
    \\"eslint\\": \\"^8.39.0\\",
    \\"plop\\": \\"^3.1.2\\",
    \\"prettier\\": \\"^2.8.8\\",
    \\"turbo\\": \\"^1.9.3\\",
    \\"typescript\\": \\"^5.0.4\\"
  },
  \\"packageManager\\": \\"pnpm@8.4.0\\",
  \\"engines\\": {
    \\"node\\": \\">=18.0.0\\"
  },
  \\"manypkg\\": {
    \\"ignoredRules\\": [
      \\"INTERNAL_MISMATCH\\"
    ]
  },
  \\"pnpm\\": {
    \\"neverBuiltDependencies\\": [
      \\"core-js\\",
      \\"core-js-compat\\",
      \\"core-js-pure\\",
      \\"cypress\\"
    ]
  },
  \\"prettier\\": \\"@2digits/prettier-config\\",
  \\"eslintConfig\\": {
    \\"extends\\": \\"@2digits\\"
  }
}
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/packages/trpc/package.json 1`] = `
"{
  \\"name\\": \\"@mod/trpc\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"sideEffects\\": false,
  \\"exports\\": {
    \\"./package.json\\": \\"./package.json\\",
    \\".\\": {
      \\"import\\": \\"./dist/index.mjs\\",
      \\"require\\": \\"./dist/index.js\\",
      \\"types\\": \\"./src/index.ts\\"
    }
  },
  \\"main\\": \\"./dist/index.js\\",
  \\"module\\": \\"./dist/index.mjs\\",
  \\"types\\": \\"./src/index.ts\\",
  \\"files\\": [
    \\"dist\\"
  ],
  \\"scripts\\": {
    \\"build\\": \\"tsup\\",
    \\"dev\\": \\"tsup --watch\\",
    \\"lint\\": \\"eslint --ignore-path ../../.gitignore .\\",
    \\"types\\": \\"tsc --noEmit\\"
  },
  \\"dependencies\\": {
    \\"@tanstack/react-query\\": \\"^4.29.5\\",
    \\"@trpc/client\\": \\"^10.23.1\\",
    \\"@trpc/next\\": \\"^10.23.1\\",
    \\"@trpc/react-query\\": \\"^10.23.1\\",
    \\"@trpc/server\\": \\"^10.23.1\\",
    \\"next\\": \\"^13.3.4\\",
    \\"superjson\\": \\"^1.12.3\\",
    \\"zod\\": \\"^3.21.4\\"
  },
  \\"devDependencies\\": {
    \\"@2digits/tsconfig\\": \\"^0.1.1\\",
    \\"eslint\\": \\"^8.39.0\\",
    \\"tsup\\": \\"^6.7.0\\",
    \\"typescript\\": \\"^5.0.4\\"
  }
}
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/packages/trpc/src/index.ts 1`] = `
"import { type inferRouterInputs, type inferRouterOutputs } from '@trpc/server';

import type { AppRouter } from './router';

export { appRouter, type AppRouter } from './router';

/**
 * Inference helpers for input types
 * @example type HelloInput = RouterInputs['example']['hello']
 **/
export type RouterInputs = inferRouterInputs<AppRouter>;

/**
 * Inference helpers for output types
 * @example type HelloOutput = RouterOutputs['example']['hello']
 **/
export type RouterOutputs = inferRouterOutputs<AppRouter>;
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/packages/trpc/src/router/example/hello.ts 1`] = `
"import { z } from 'zod';

import { publicProcedure } from '../../trpc';

export const helloProcedure = publicProcedure
  .input(z.object({ name: z.string() }))
  .query(({ input }) => \`Hello \${input.name}!\`);
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/packages/trpc/src/router/index.ts 1`] = `
"import { createTRPCRouter } from '../trpc';
import { helloProcedure } from './example/hello';

export const appRouter = createTRPCRouter({
  hello: helloProcedure,
});

export type AppRouter = typeof appRouter;
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/packages/trpc/src/trpc.ts 1`] = `
"import { initTRPC } from '@trpc/server';
import superjson from 'superjson';
import { ZodError } from 'zod';

const t = initTRPC.create({
  transformer: superjson,
  errorFormatter({ shape, error }) {
    return {
      ...shape,
      data: {
        ...shape.data,
        zodError: error.cause instanceof ZodError ? error.cause.flatten() : undefined,
      },
    };
  },
});

export const createTRPCRouter = t.router;

export const publicProcedure = t.procedure;
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/packages/trpc/tsconfig.json 1`] = `
"{
  \\"extends\\": \\"@2digits/tsconfig/tsconfig.json\\",
  \\"include\\": [\\"**/*.ts\\", \\"**/*.tsx\\"]
}
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/packages/trpc/tsup.config.ts 1`] = `
"import { defineConfig } from 'tsup';

import { name } from './package.json';

export default defineConfig({
  minify: true,
  target: 'esnext',
  skipNodeModulesBundle: true,
  sourcemap: true,
  treeshake: true,
  format: ['esm', 'cjs'],
  entry: ['src/index.ts'],
  clean: true,
  dts: true,
  name,
});
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/pnpm-workspace.yaml 1`] = `
"packages:
  - 'apps/*'
  - 'packages/*'
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/tsconfig.json 1`] = `
"{
  \\"extends\\": \\"@2digits/tsconfig/tsconfig.json\\"
}
"
`;

exports[`base > web > trpc > should add a trpc module > ./test/path/turbo.json 1`] = `
"{
  \\"globalDependencies\\": [\\"**/.env\\", \\"tsconfig.json\\"],
  \\"pipeline\\": {
    \\"build\\": { \\"dependsOn\\": [\\"^build\\"], \\"outputs\\": [\\"dist/**\\", \\"build/**\\"] },
    \\"dev\\": { \\"cache\\": false, \\"persistent\\": true },
    \\"lint\\": { \\"cache\\": false },
    \\"lint-fix\\": { \\"cache\\": false },
    \\"types\\": { \\"dependsOn\\": [\\"^types\\"], \\"cache\\": false }
  }
}
"
`;
